Fix more sonarcloud nitpicks